--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!-- Some basic meta info -->
-        <title>Example</title>
+        <title>SocketIO Flask Selenium</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -45,7 +45,7 @@
 
 <body>
     <div style="margin: 25px; display: flex; flex-direction: column;">
-        <h1 class="title">Hello {{username}}.</h1>
+        <h1 class="title">Hello Guru.</h1>
         <p>Welcome to the flask quick start example.</p>                        
         <textarea id="chat" style="width: 500px; height: 250px; font-size: 18px; font-family: monospace; margin-top: 10px;"></textarea>                 
         <div style="display: flex; flex-direction: row;">
